--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "author": "Brian Han @thisisbrianhan",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.12.4",
-    "mongoose": "^4.0.4"
+    "express": "~4.12.4",
+    "mongoose": "~4.0.4"
   }
 }
